<?xml version="1.0"?>
<package format="2">
  <name>state_machine_tutorial</name>
  <version>0.0.1</version>
  <description>The state_machine_tutorial package</description>

  <maintainer email="led@ipa.fhg.de">ipa-led</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>airbus_ssm_core</build_depend>
  <build_depend>airbus_cobot_gui</build_depend>
  <build_depend>airbus_ssm_plugin</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_viewer</build_depend>
    
  <exec_depend>airbus_ssm_core</exec_depend>
  <exec_depend>airbus_cobot_gui</exec_depend>
  <exec_depend>airbus_ssm_plugin</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_viewer</exec_depend>

  <export>

  </export>
</package>
