<?xml version="1.0"?>
<package format="2">
  <name>state_machine_tutorial</name>
  <version>0.0.1</version>
  <description>The state_machine_tutorial package</description>

  <maintainer email="led@ipa.fhg.de">ipa-led</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_viewer</exec_depend>

  <export>

  </export>
</package>
